--- a/src/components/residentList.css
+++ b/src/components/residentList.css
@@ -15,6 +15,6 @@
   border-radius: 25%;
   min-width: 30px;
 }
-.button-pagination:active{
+.button-pagination.active{
   background-color: goldenrod;
 }
