--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
   overflow-x: hidden;
   overflow-y: scroll;
   z-index: -1;
-  background: url(./public/img/Frame432night.png) top no-repeat ;
+  background: url(./public/img/Frame432night.png);
 }
