--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,8 @@
   overflow-x: hidden;
   overflow-y: scroll;
   z-index: -1;
-  background: url(./public/img/Frame432night.png);
+  background: url(/public/img/Frame432night.png);
+}
+.main_container {
+  background-image: url(/public/img/Frame432night.png);
 }
