--- a/src/components/location.css
+++ b/src/components/location.css
@@ -20,7 +20,7 @@
   padding-left: 12%;
   padding-right: 12%;
   max-width: 347px;
-  /* flex-grow: 1; */
+  z-index: 1;
 }
 
 .button_container {
@@ -54,7 +54,3 @@
   background-color: #c9bedc;
   opacity: 0.8;
 }
-
-/* .button_container {
-    flex-grow: 1;
-} */
